updated with question for Kevin

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
         var myPara = document.querySelector("p"); //fetching the paragraph element on the page and storing it in a variable
 
+
+        //question for Kevin: is the var 'letter' below is a name we can just makeup?
         for (var letter of myLittleAlphabet) {
             if(letter <= 2){
                 myPara.innerHTML += `<span class="plum">${letter}</span>`; 
